--- a/ipvps.conf
+++ b/ipvps.conf
@@ -1,3 +1,4 @@
 ### USER ID VALIDITY IPVPS 
 ### Nakata 143 LIFETIME 1.1.1.1
 ### Nakata 143 LIFETIME 167.172.94.37
+### Nakata 143 LIFETIEM 159.223.84.72
