--- a/ipvps.conf
+++ b/ipvps.conf
@@ -1,3 +1,4 @@
 ### USER ID VALIDITY IPVPS 
 ### Nakata 143 LIFETIME 1.1.1.1
 ### Nakata 143 LIFETIME 128.199.251.5
+### Test 143 LIFETIME 128.199.145.199
